# NN_ROBOT

./: .gitattributes  .gitignore  PROJECT_SUMMARY.md  PUBLISH_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SETUP.md  examples.py  ik_nn_model.pth  requirements.txt
assets/mesh/: base.stl  fixed_ground.stl  link2.stl  link3.stl  link4.stl  link5.stl
assets/urdf/: my_robot_primitive.urdf  robot_template.urdf
config/: config.yaml  controllers.yaml
gazebo_simulation/: package.xml
gazebo_simulation/launch/: robot_arm.launch
gazebo_simulation/worlds/: robot_arm.world
src/: demo_sim_with_nn.py  gazebo_simulator.py  ik_dataset.py  main_controller.py  nn_ik_model.py  nn_ik_solver.py  sim_pybullet.py  train_ik.py  utils_config.py  utils_logging.py
